// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StringValuesTypingsGenerator default exports overrides for individual files with exportAsDefault filled overriding with { exportAsDefault: false } should generate typings 1`] = `
Object {
  "/out/test.ext.d.ts": "// This file was generated by a tool. Modifying it will produce unexpected behavior

/**
 * test comment
second line
 */
export declare const test: string;
",
}
`;

exports[`StringValuesTypingsGenerator default exports overrides for individual files with exportAsDefault filled overriding with { interfaceName: 'IOverride' }  should generate typings 1`] = `
Object {
  "/out/test.ext.d.ts": "// This file was generated by a tool. Modifying it will produce unexpected behavior

/**
 * base-comment
 */
export interface IOverride {
  /**
   * test comment
second line
   */
  'test': string;

}

/**
 * base-value-comment
 */
declare const strings: IOverride;

export default strings;",
}
`;

exports[`StringValuesTypingsGenerator default exports overrides for individual files with exportAsDefault filled overriding with a new doc comment  should generate typings 1`] = `
Object {
  "/out/test.ext.d.ts": "// This file was generated by a tool. Modifying it will produce unexpected behavior

/**
 * doc-comment
 * second line
 */
export interface IBase {
  /**
   * test comment
second line
   */
  'test': string;

}

/**
 * value-comment
 * second line
 */
declare const strings: IBase;

export default strings;",
}
`;

exports[`StringValuesTypingsGenerator default exports overrides for individual files with exportAsDefault set to {} overriding with { exportAsDefault: false } should generate typings 1`] = `
Object {
  "/out/test.ext.d.ts": "// This file was generated by a tool. Modifying it will produce unexpected behavior

/**
 * test comment
second line
 */
export declare const test: string;
",
}
`;

exports[`StringValuesTypingsGenerator default exports overrides for individual files with exportAsDefault set to {} overriding with { interfaceName: 'IOverride' }  should generate typings 1`] = `
Object {
  "/out/test.ext.d.ts": "// This file was generated by a tool. Modifying it will produce unexpected behavior

export interface IOverride {
  /**
   * test comment
second line
   */
  'test': string;

}

declare const strings: IOverride;

export default strings;",
}
`;

exports[`StringValuesTypingsGenerator default exports overrides for individual files with exportAsDefault set to {} overriding with a new doc comment  should generate typings 1`] = `
Object {
  "/out/test.ext.d.ts": "// This file was generated by a tool. Modifying it will produce unexpected behavior

/**
 * doc-comment
 * second line
 */
export interface IExport {
  /**
   * test comment
second line
   */
  'test': string;

}

/**
 * value-comment
 * second line
 */
declare const strings: IExport;

export default strings;",
}
`;

exports[`StringValuesTypingsGenerator default exports overrides for individual files with exportAsDefault set to true overriding with { exportAsDefault: false } should generate typings 1`] = `
Object {
  "/out/test.ext.d.ts": "// This file was generated by a tool. Modifying it will produce unexpected behavior

/**
 * test comment
second line
 */
export declare const test: string;
",
}
`;

exports[`StringValuesTypingsGenerator default exports overrides for individual files with exportAsDefault set to true overriding with { interfaceName: 'IOverride' }  should generate typings 1`] = `
Object {
  "/out/test.ext.d.ts": "// This file was generated by a tool. Modifying it will produce unexpected behavior

export interface IOverride {
  /**
   * test comment
second line
   */
  'test': string;

}

declare const strings: IOverride;

export default strings;",
}
`;

exports[`StringValuesTypingsGenerator default exports overrides for individual files with exportAsDefault set to true overriding with a new doc comment  should generate typings 1`] = `
Object {
  "/out/test.ext.d.ts": "// This file was generated by a tool. Modifying it will produce unexpected behavior

/**
 * doc-comment
 * second line
 */
export interface IExport {
  /**
   * test comment
second line
   */
  'test': string;

}

/**
 * value-comment
 * second line
 */
declare const strings: IExport;

export default strings;",
}
`;

exports[`StringValuesTypingsGenerator default exports overrides for individual files with exportAsDefault unset overriding with { exportAsDefault: false } should generate typings 1`] = `
Object {
  "/out/test.ext.d.ts": "// This file was generated by a tool. Modifying it will produce unexpected behavior

/**
 * test comment
second line
 */
export declare const test: string;
",
}
`;

exports[`StringValuesTypingsGenerator default exports overrides for individual files with exportAsDefault unset overriding with { interfaceName: 'IOverride' }  should generate typings 1`] = `
Object {
  "/out/test.ext.d.ts": "// This file was generated by a tool. Modifying it will produce unexpected behavior

export interface IOverride {
  /**
   * test comment
second line
   */
  'test': string;

}

declare const strings: IOverride;

export default strings;",
}
`;

exports[`StringValuesTypingsGenerator default exports overrides for individual files with exportAsDefault unset overriding with a new doc comment  should generate typings 1`] = `
Object {
  "/out/test.ext.d.ts": "// This file was generated by a tool. Modifying it will produce unexpected behavior

/**
 * doc-comment
 * second line
 */
export interface IExport {
  /**
   * test comment
second line
   */
  'test': string;

}

/**
 * value-comment
 * second line
 */
declare const strings: IExport;

export default strings;",
}
`;

exports[`StringValuesTypingsGenerator default exports with { exportAsDefault: { *DocumentationComment: 'doc-comment\\nsecond line' } } should generate typings 1`] = `
Object {
  "/out/test.ext.d.ts": "// This file was generated by a tool. Modifying it will produce unexpected behavior

/**
 * doc-comment
 * second line
 */
export interface IExport {
  /**
   * test comment
second line
   */
  'test': string;

}

/**
 * value-comment
 * second line
 */
declare const strings: IExport;

export default strings;",
}
`;

exports[`StringValuesTypingsGenerator default exports with { exportAsDefault: { interfaceName: 'IOverride' }, exportAsDefaultInterfaceName: 'IDeprecated' } should generate typings 1`] = `
Object {
  "/out/test.ext.d.ts": "// This file was generated by a tool. Modifying it will produce unexpected behavior

export interface IOverride {
  /**
   * test comment
second line
   */
  'test': string;

}

declare const strings: IOverride;

export default strings;",
}
`;

exports[`StringValuesTypingsGenerator default exports with { exportAsDefault: {}, exportAsDefaultInterfaceName: 'IOverride' } should generate typings 1`] = `
Object {
  "/out/test.ext.d.ts": "// This file was generated by a tool. Modifying it will produce unexpected behavior

export interface IOverride {
  /**
   * test comment
second line
   */
  'test': string;

}

declare const strings: IOverride;

export default strings;",
}
`;

exports[`StringValuesTypingsGenerator default exports with { exportAsDefault: documentationComment: 'deprecated', interfaceDocumentationComment: 'doc-comment' } should generate typings 1`] = `
Object {
  "/out/test.ext.d.ts": "// This file was generated by a tool. Modifying it will produce unexpected behavior

/**
 * doc-comment
 */
export interface IExport {
  /**
   * test comment
second line
   */
  'test': string;

}

declare const strings: IExport;

export default strings;",
}
`;

exports[`StringValuesTypingsGenerator default exports with { exportAsDefault: true } should generate typings 1`] = `
Object {
  "/out/test.ext.d.ts": "// This file was generated by a tool. Modifying it will produce unexpected behavior

export interface IExport {
  /**
   * test comment
second line
   */
  'test': string;

}

declare const strings: IExport;

export default strings;",
}
`;

exports[`StringValuesTypingsGenerator default exports with { exportAsDefault: true, exportAsDefaultInterfaceName: 'IOverride' } should generate typings 1`] = `
Object {
  "/out/test.ext.d.ts": "// This file was generated by a tool. Modifying it will produce unexpected behavior

export interface IOverride {
  /**
   * test comment
second line
   */
  'test': string;

}

declare const strings: IOverride;

export default strings;",
}
`;

exports[`StringValuesTypingsGenerator non-default exports should generate typings 1`] = `
Object {
  "/out/test.ext.d.ts": "// This file was generated by a tool. Modifying it will produce unexpected behavior

/**
 * test comment
second line
 */
export declare const test: string;
",
}
`;
